--- a/CRMPhone/MainWindow.xaml
+++ b/CRMPhone/MainWindow.xaml
@@ -136,6 +136,11 @@
                             <TextBlock Margin ="2" Text="{Binding Path=CreateTime, StringFormat='{}{0:dd.MM.yy HH:mm}'}" />
                             <TextBlock Margin ="2" Width="60" Text="{Binding Path=ServiceCompany}" />
                             <TextBlock Margin ="2" Foreground="Blue" FontWeight="DemiBold" Text="{Binding Path=CallerId}" />
+                            <Button HorizontalAlignment="Center" Background="Transparent" BorderThickness="0" ToolTip="Удаление звонок!" Visibility="{Binding Path=DataContext.IsAdminRoleExist, ElementName=notAnsweredListBox}"
+                                    Command="{Binding Path=DataContext.DeleteCallFromListCommand, ElementName=notAnsweredListBox}"
+                                    CommandParameter="{Binding}">
+                                <Image Source="pack://application:,,,/Images/delete.png" Stretch="UniformToFill" Height="24"/>
+                            </Button>
                         </DockPanel>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
