--- a/CRMPhone/Controls/Admins/ServiceCompanyControl.xaml
+++ b/CRMPhone/Controls/Admins/ServiceCompanyControl.xaml
@@ -5,8 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:CRMPhone.Controls"
              xmlns:viewModel="clr-namespace:CRMPhone.ViewModel"
+             xmlns:dto="clr-namespace:RequestServiceImpl.Dto;assembly=RequestServiceImpl"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300"
+             d:DesignHeight="300" d:DesignWidth="600"
              d:DataContext="{d:DesignInstance viewModel:ServiceCompanyControlContext}">
     <Grid>
         <Grid.RowDefinitions>
@@ -30,15 +31,30 @@
                               CommandParameter="{Binding ElementName=ServiceCompanyGrid, Path=SelectedItem}" />
             </DataGrid.InputBindings>
             <DataGrid.Columns>
-               <DataGridTextColumn Header="Наименование" Width="*"
-                                    Binding="{Binding Path=Name}">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="{x:Type TextBlock}">
-                            <Setter Property="TextWrapping" Value="Wrap"/>
-                            <Setter Property="Margin" Value="3"/>
+                <DataGridTemplateColumn Width="570">
+                    <DataGridTemplateColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="ContentTemplate">
+                                <Setter.Value>
+                                    <DataTemplate>
+                                        <TextBlock Text="Наименование"/>
+                                    </DataTemplate>
+                                </Setter.Value>
+                            </Setter>
                         </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
+                    </DataGridTemplateColumn.HeaderStyle>
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate DataType="dto:ServiceCompanyDto">
+                            <DockPanel>
+                            <TextBlock Text="{Binding Path=Name}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                             <Button Margin="3" Width="80" HorizontalAlignment="Right"
+                                     Command="{Binding ElementName=ServiceCompanyGrid, Path=DataContext.EditBindingCommand}" CommandParameter="{Binding ElementName=ServiceCompanyGrid, Path=SelectedItem}">Привязка</Button>
+                            </DockPanel>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+
+                
                 <!--<DataGridTextColumn Header="Доступность" Width="100"
                                     Binding="{Binding Path=IsEnabled}">
                     <DataGridTextColumn.ElementStyle>
