--- a/CRMPhone/Dialogs/Admins/ServiceAddOrEditDialog.xaml
+++ b/CRMPhone/Dialogs/Admins/ServiceAddOrEditDialog.xaml
@@ -4,9 +4,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CRMPhone.Dialogs.Admins"
+        xmlns:admins="clr-namespace:CRMPhone.ViewModel.Admins"
         mc:Ignorable="d"
-        Title="Услиги и причины" Height="120" Width="420" MinWidth ="420" MinHeight="120"
+        Title="Услиги и причины" Height="130" Width="420" MinWidth ="420" MinHeight="130"
         WindowStartupLocation="CenterOwner"
+        d:DataContext="{d:DesignInstance admins:ServiceDialogViewModel}"
         WindowStyle="ToolWindow">
     <Grid>
         <Grid.RowDefinitions>
@@ -14,11 +16,14 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <DockPanel Grid.Row="1">
+        <StackPanel Grid.Row="1">
+        <DockPanel >
             <TextBlock Margin="5" VerticalAlignment="Center" Text="Название:"/>
             <TextBox Margin="5" HorizontalAlignment="Right" Width="300" MaxLength="255" TextWrapping="Wrap" Text="{Binding ServiceName}">
             </TextBox>
         </DockPanel>
+            <CheckBox Margin="5" IsChecked="{Binding Immediate}" Visibility="{Binding CanSetImmediate}">Аварийная</CheckBox>
+        </StackPanel>
         <StackPanel Grid.Row="2" HorizontalAlignment="Right">
             <Button Margin="5" Width="120" Height="24" Command="{Binding Path=SaveCommand}">Сохранить</Button>
         </StackPanel>
