--- a/CRMPhone/Controls/Admins/HouseAdminControl.xaml
+++ b/CRMPhone/Controls/Admins/HouseAdminControl.xaml
@@ -113,6 +113,15 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
+                    <DataGridTextColumn Header="Микрорайон" Width="*"
+                                    Binding="{Binding Path=RegionName}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="TextWrapping" Value="Wrap"/>
+                            <Setter Property="Margin" Value="3"/>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
