--- a/CRMPhone/Dialogs/Admins/HouseAddOrEditDialog.xaml
+++ b/CRMPhone/Dialogs/Admins/HouseAddOrEditDialog.xaml
@@ -5,11 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:admin="clr-namespace:CRMPhone.ViewModel.Admins"
         mc:Ignorable="d"
-        Title="Дома" Height="320" Width="280" MinWidth ="280" MinHeight="370"
+        Title="Дома" Height="400" Width="280" MinWidth ="280" MinHeight="400"
         WindowStartupLocation="CenterOwner"
         WindowStyle="ToolWindow"
         d:DataContext="{d:DesignInstance admin:HouseAdminDialogViewModel}">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -24,6 +28,14 @@
             <DockPanel>
                 <TextBlock Margin="5" VerticalAlignment="Center" Text="УК:"/>
                 <ComboBox Margin="5" HorizontalAlignment="Right" Width="170" DisplayMemberPath="Name" SelectedItem="{Binding SelectedServiceCompany}" ItemsSource="{Binding ServiceCompanyList}">
+                    <ComboBox.Resources>
+                        <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
+                    </ComboBox.Resources>
+                </ComboBox>
+            </DockPanel>
+            <DockPanel>
+                <TextBlock Margin="5" VerticalAlignment="Center" Text="Микрорайон:"/>
+                <ComboBox Margin="5" HorizontalAlignment="Right" Width="170" DisplayMemberPath="Name" SelectedItem="{Binding SelectedCityRegion}" ItemsSource="{Binding CityRegionList}">
                     <ComboBox.Resources>
                         <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="Gray"/>
                     </ComboBox.Resources>
