--- a/CRMPhone/Dialogs/RequestDialog.xaml
+++ b/CRMPhone/Dialogs/RequestDialog.xaml
@@ -56,6 +56,8 @@
             <DockPanel>
                 <TextBlock Margin="3" VerticalAlignment="Center" Text="УК:"/>
                 <TextBlock Margin="3" VerticalAlignment="Center" FontWeight="Bold" Text="{Binding ServiceCompany}"/>
+                <TextBlock Margin="3" VerticalAlignment="Center" Text="Район:"/>
+                <TextBlock Margin="3" VerticalAlignment="Center" FontWeight="Bold" Text="{Binding CityRegion}"/>
                 <TextBlock Margin="3" VerticalAlignment="Center" Text="Дата ввода в эксплуатацию:"/>
                 <TextBlock Margin="3" VerticalAlignment="Center" FontWeight="Bold" Text="{Binding CommissioningDate, StringFormat='{}{0:dd.MM.yyyy}'}"/>
                 <TextBlock Margin="3" VerticalAlignment="Center" Text="Количество лифток в подъезде:"/>
